real overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow: hidden;
   padding: 0 6rem 0 3rem;
 }
 
@@ -183,6 +182,15 @@ h2 span {
   font-weight: lighter;
   font-family: "Barlow";
   text-transform: uppercase;
+}
+
+figure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .planet {
